--- a/index.html
+++ b/index.html
@@ -12,57 +12,94 @@
 
 <body>
     <header>
-
-        <div class="sidebars">
-            <img id="logo" src="img/Icons/Spotify logo.png" alt="Spotify logo">
-            <!--Sidebar section-1-->
-            <div class="sidebars-topnav">
-                <div class="linkflex menu">
-                    <img src="img/Icons/Home.png" alt="Home" />
-                    <a href="#">Home</a>
-                </div>
-                <div class="linkflex menu">
-                    <img src="img/Icons/Search.png" alt="Search" />
-                    <a href="#">Search</a>
-                </div>
-                <div class="linkflex menu">
-                    <img src="img/Icons/Your library.png" alt="Library" />
-                    <a href="#">Library</a>
-                </div>
+        <!-- side-nav-bar -->
+        <div class="sidebar position-fixed left-0 top-0 bottom-0">
+            <div class="logo">
+                <a href="#"><img src="img/Icons/Spotify logo.png" alt="Spotify logo"></a>
             </div>
-            <!--Sidebar section-2-->
-            <div class="sidebars-middlenav">
-
-                <div class="menu">
-                    <div class="d-flex M">
-                    <img src="img/Icons/plus.png" alt="" />
-                    <a href="#">Create Playlist</a>
-                    </div>
-                </div>
-                <div class="linkflex menu">
-                    <img src="img/Icons/purpleheart.png" alt="purpleheart" />
-                    <a href="#">Liked Songs</a>
-                </div>
-                <div class="linkflex menu">
-                    <img src="img/Icons/hotspot.png" alt="hotspot" />
-                    <a href="#">Your Episodes</a>
-                </div>
-                <!--Sidebar section-3-->
-                <div class="menu">
-                    <p>FAV</p>
-                    <p>Daily Mix 1</p>
-                    <p>Discover Weekly</p>
-                    <p>Malayalam</p>
-                    <p>Dance / Electronix Mix</p>
-                    <p>EDM / Popular</p>
-                </div>
-                <!--Sidebar section-4-->
-                <div class="linkflex menu">
-                    <img src="img/Icons/download.png" alt="download App">
-                    <a href="#">Install App</a>
-                </div>
+            <div class="navigation">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span><img src="img/Icons/Home.png" alt="home"></span>
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span><img src="img/Icons/Search.png" alt="Search"></span>
+                            <span>Search</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span><img src="img/Icons/Your library.png" alt="Your library"></span>
+                            <span> Your Library</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
-
+            <div class="navigation">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span><img src="img/Icons/plus.png" alt="Create Playlist"></span>
+                            <span>Create Playlist</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span><img src="img/Icons/purpleheart.png" alt="Liked Songs"></span>
+                            <span>Liked Songs</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span><img src="img/Icons/hotspot.png" alt="Your Episodes"></span>
+                            <span> Your Episodes</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="navigation">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <p>FAV</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>Daily Mix 1</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>Discover Weekly</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>Malayalam</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>Dance / Electronix Mix</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>EDM / Popular</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="install-app">
+                <a href="#"><span><img src="img/Icons/download.png" alt="download"></span>
+                    <span>Install App</span></a>
+            </div>
+        </div>
     </header>
 </body>
 
