--- a/index.html
+++ b/index.html
@@ -13,94 +13,152 @@
 <body>
     <header>
         <!-- side-nav-bar -->
+        <section>
+        
         <div class="sidebar position-fixed left-0 top-0 bottom-0">
             <div class="logo">
                 <a href="#"><img src="img/Icons/Spotify logo.png" alt="Spotify logo"></a>
             </div>
             <div class="navigation">
                 <ul>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <span><img src="img/Icons/Home.png" alt="home"></span>
                             <span>Home</span>
                         </a>
                     </li>
+                </div>
+                <div class="page">
                     <li>
                         <a href="#">
                             <span><img src="img/Icons/Search.png" alt="Search"></span>
                             <span>Search</span>
                         </a>
                     </li>
+                    </div>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <span><img src="img/Icons/Your library.png" alt="Your library"></span>
                             <span> Your Library</span>
                         </a>
                     </li>
+                    </div>
                 </ul>
             </div>
             <div class="navigation">
                 <ul>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <span><img src="img/Icons/plus.png" alt="Create Playlist"></span>
                             <span>Create Playlist</span>
                         </a>
                     </li>
+                    </div>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <span><img src="img/Icons/purpleheart.png" alt="Liked Songs"></span>
                             <span>Liked Songs</span>
                         </a>
                     </li>
+                    </div>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <span><img src="img/Icons/hotspot.png" alt="Your Episodes"></span>
                             <span> Your Episodes</span>
                         </a>
                     </li>
+                    </div>
                 </ul>
             </div>
             <div class="navigation">
                 <ul>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <p>FAV</p>
                         </a>
                     </li>
+                    </div>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <p>Daily Mix 1</p>
                         </a>
                     </li>
+                    </div>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <p>Discover Weekly</p>
                         </a>
                     </li>
+                    </div>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <p>Malayalam</p>
                         </a>
                     </li>
+                    </div>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <p>Dance / Electronix Mix</p>
                         </a>
                     </li>
+                    </div>
+                    <div class="page">
                     <li>
                         <a href="#">
                             <p>EDM / Popular</p>
                         </a>
-                    </li>
+                    </li> 
+                    </div>
                 </ul>
             </div>
-            <div class="install-app">
+            <div class="page install-app">
                 <a href="#"><span><img src="img/Icons/download.png" alt="download"></span>
-                    <span>Install App</span></a>
+                    <span class="text">Install App</span></a>
             </div>
         </div>
+    </section>
     </header>
+    <main>
+        <div class="main-container">
+            <!-- topbar -->
+            <section>
+                <div class="topbar d-flex justify-content-between position-sticky top-0px">
+                    <div class="prev-next-buttons">
+                        <button type="button"><img src="img/Icons/backward.png" alt="backward button"></button>
+                        <button type="button"><img src="img/Icons/forward.png" alt="forward button"></button>
+                    </div>
+                    <div class="dowpdown">
+                        <img src="img/Icons/imgs/profile.png" alt="Profile img">
+                        <select>
+                            <option disabled selected>Angel</option>
+                            <option>Your Profile</option>
+                            <option>Sitting</option>
+                            <option>Log out</option>
+                        </select>
+                    </div>
+                </div>
+            </section>
+            <!-- hero section -->
+            <section>
+                <div class="hero-section">
+                    <h1>Good morning</h1>
+                    <div class="hero-categories">
+                        
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 
 </html>
