--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                     </ul>
                 </div>
                 <div class="page install-app">
-                    <a  class="text-decoration-none" href="#"><span><img src="img/Icons/download.png" alt="download"></span>
+                    <a class="text-decoration-none" href="#"><span><img src="img/Icons/download.png"
+                                alt="download"></span>
                         <span class="text">Install App</span></a>
                 </div>
             </div>
@@ -182,70 +183,106 @@
                     <p>SEE ALL</p>
                 </div>
                 <div class="categories-box">
-                <div class="card-2">
-                    <a class="text-decoration-none" href="#">
-                        <img src="img/Icons/imgs/Rectangle 21.png">
-                        <h6>Weekly Motivatio...</h6>
-                        <p>Ben Ina Scott</p>
-                    </a>
+                    <div class="card-2">
+                        <a class="text-decoration-none" href="#">
+                            <img src="img/Icons/imgs/Rectangle 21.png">
+                            <h6>Weekly Motivatio...</h6>
+                            <p>Ben Ina Scott</p>
+                        </a>
+                    </div>
+                    <div class="card-2">
+                        <a class="text-decoration-none" href="#">
+                            <img src="img/Icons/imgs/Rectangle 22.png">
+                            <h6>MEDITATION SELF</h6>
+                            <p>Ibn Hussain Aleen</p>
+                        </a>
+                    </div>
+                    <div class="card-2">
+                        <a class="text-decoration-none" href="#">
+                            <img src="img/Icons/imgs/Rectangle 23.png">
+                            <h6>Words beyond act</h6>
+                            <p>Samuel Scott</p>
+                        </a>
+                    </div>
+                    <div class="card-2">
+                        <a class="text-decoration-none" href="#">
+                            <img src="img/Icons/imgs/Rectangle 16.png">
+                            <h6>The Alexa Show</h6>
+                            <p>Adriana Tom</p>
+                        </a>
+                    </div>
+                    <div class="card-2">
+                        <a class="text-decoration-none" href="#">
+                            <img src="img/Icons/imgs/Rectangle 16.png">
+                            <h6>Neffex Playlist</h6>
+                            <p>Ben Ina Scott</p>
+                        </a>
+                    </div>
+                    <div class="card-2">
+                        <a class="text-decoration-none" href="#">
+                            <img src="img/Icons/imgs/Rectangle 16.png">
+                            <h6>Neffex Playlist</h6>
+                            <p>Ben Ina Scott</p>
+                        </a>
+                    </div>
+                    <div class="card-2">
+                        <a class="text-decoration-none" href="#">
+                            <img src="img/Icons/imgs/Rectangle 16.png">
+                            <h6>Neffex Playlist</h6>
+                            <p>Ben Ina Scott</p>
+                        </a>
+                    </div>
+                    <div class="card-2">
+                        <a class="text-decoration-none" href="#">
+                            <img src="img/Icons/imgs/Rectangle 16.png">
+                            <h6>Neffex Playlist</h6>
+                            <p>Ben Ina Scott</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="card-2">
-                    <a class="text-decoration-none" href="#">
-                        <img src="img/Icons/imgs/Rectangle 22.png">
-                        <h6>MEDITATION SELF</h6>
-                        <p>Ibn Hussain Aleen</p>
-                    </a>
-                </div>
-                <div class="card-2">
-                    <a class="text-decoration-none" href="#">
-                        <img src="img/Icons/imgs/Rectangle 23.png">
-                        <h6>Words beyond act...</h6>
-                        <p>Samuel Scott</p>
-                    </a>
-                </div>
-                <div class="card-2">
-                    <a class="text-decoration-none" href="#">
-                        <img src="img/Icons/imgs/Rectangle 16.png">
-                        <h6>The Alexa Show</h6>
-                        <p>Adriana Tom</p>
-                    </a>
-                </div>
-                <div class="card-2">
-                    <a class="text-decoration-none" href="#">
-                        <img src="img/Icons/imgs/Rectangle 16.png">
-                        <h6>Neffex Playlist</h6>
-                        <p>Ben Ina Scott</p>
-                    </a>
-                </div>
-                <div class="card-2">
-                    <a class="text-decoration-none" href="#">
-                        <img src="img/Icons/imgs/Rectangle 16.png">
-                        <h6>Neffex Playlist</h6>
-                        <p>Ben Ina Scott</p>
-                    </a>
-                </div>
-                <div class="card-2">
-                    <a class="text-decoration-none" href="#">
-                        <img src="img/Icons/imgs/Rectangle 16.png">
-                        <h6>Neffex Playlist</h6>
-                        <p>Ben Ina Scott</p>
-                    </a>
-                </div>
-                <div class="card-2">
-                    <a class="text-decoration-none" href="#">
-                        <img src="img/Icons/imgs/Rectangle 16.png">
-                        <h6>Neffex Playlist</h6>
-                        <p>Ben Ina Scott</p>
-                    </a>
-                </div>
-            </div>
-            </section>
-            <!-- bottom bar -->
-            <section>
-                
             </section>
         </div>
+        <!-- bottom bar -->
+        <section>
+            <div class="bottom-bar d-flex justify-content-between align-items-center">
+                <div class="left-items">
+                    <img src="img/Icons/imgs/playing-img.png">
+                    <div class="content">
+                        <h6>Dreaming On</h6>
+                        <p>NEFFEX</p>
+                    </div>
+                    <img src="img/Icons/bx_bxs-heart.png">
+                </div>
+                <div class="middle-items">
+                    <div class="upnav">
+                        <img src="img/Icons/shuffle.png">
+                        <img src="img/Icons/previous.png">
+                        <img src="img/Icons/gridicons_play.png">
+                        <img src="img/Icons/next.png">
+                        <img src="img/Icons/loop.png">
+                    </div>
+                    <div class="pay">
+                        <p>2:11</p>
+                        <img src="img/Icons/musicbar.png">
+                        <p>2:42</p>
+                    </div>
+                </div>
+                <div class="right-items">
+                    <img src="img/Icons/microphone.png">
+                    <img src="img/Icons/query-queue.png">
+                    <img src="img/Icons/carbon_laptop.png">
+                    <img src="img/Icons/speaker-white.png">
+                    <img src="img/Icons/volume-bar.png">
+                    <img src="img/Icons/strech-speaker.png">
+                </div>
+            </div>
+            <div class="note d-flex bg-success">
+                <img src="img/Icons/speaker-black.png">
+                <p>Listening on ASUS-ROG-G531GT</p>
+            </div>
+        </section>
     </main>
+
 </body>
 
 </html>
