--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
             <div class="sidebar position-fixed left-0 top-0 bottom-0">
                 <div class="logo">
-                    <a href="#"><img src="img/Icons/Spotify logo.png" alt="Spotify logo"></a>
+                    <a href="index.html"><img src="img/Icons/Spotify logo.png" alt="Spotify logo"></a>
                 </div>
                 <div class="navigation">
                     <ul>
                         <div class="page">
                             <li>
-                                <a href="#">
+                                <a href="index.html">
                                     <span><img src="img/Icons/Home.png" alt="home"></span>
                                     <span>Home</span>
                                 </a>
@@ -59,7 +59,7 @@
                         </div>
                         <div class="page">
                             <li>
-                                <a href="#">
+                                <a href="liked-songs.html">
                                     <span><img src="img/Icons/purpleheart.png" alt="Liked Songs"></span>
                                     <span>Liked Songs</span>
                                 </a>
