--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
         </div>
         <!-- bottom bar -->
         <section>
+            <div class="bottom-bar-at">
             <div class="bottom-bar d-flex justify-content-between align-items-center">
                 <div class="left-items">
                     <img src="img/Icons/imgs/playing-img.png">
@@ -280,6 +281,7 @@
                 <img src="img/Icons/speaker-black.png">
                 <p>Listening on ASUS-ROG-G531GT</p>
             </div>
+        </div>
         </section>
     </main>
 
