--- a/liked-songs.html
+++ b/liked-songs.html
@@ -230,6 +230,7 @@
         </div>
         <!-- bottom bar -->
         <section>
+            <div class="bottom-bar-at">
             <div class="bottom-bar d-flex justify-content-between align-items-center">
                 <div class="left-items">
                     <img src="img/Icons/imgs/Rectangle 9.png">
@@ -261,6 +262,7 @@
                     <img src="img/Icons/volume-bar.png">
                 </div>
             </div>
+        </div>
         </section>
     </main>
 
